--- a/shorturl/frontend/assets/index.html
+++ b/shorturl/frontend/assets/index.html
@@ -1,1 +1,111 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>ShortURL</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+
+    <!-- Bootstrap CSS v5.2.1 -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
+  </head>
+
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-sm navbar-light bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="#">ShortURL</a>
+          <button
+            class="navbar-toggler d-lg-none"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#collapsibleNavId"
+            aria-controls="collapsibleNavId"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="collapsibleNavId">
+            <ul class="navbar-nav me-auto mt-2 mt-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" href="#" aria-current="page"
+                  >Home <span class="visually-hidden">(current)</span></a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+      <!-- place navbar here -->
+    </header>
+    <main>
+      <div class="container">
+        <div class="mb-3 row">
+          <h1>Enter a URL to shorten</h1>
+        </div>
+
+        <div class="mb-3 row">
+          <div
+            class="alert alert-primary d-none"
+            role="alert"
+            id="success_alert"
+          >
+            <strong>Success</strong> Your ShortURL is
+            <a id="success_message" href="#">here</a>
+          </div>
+          <div class="alert alert-danger d-none" role="alert" id="error_alert">
+            <strong>Error</strong> <span id="error_message">Error Message</span>
+          </div>
+        </div>
+
+        <form class="needs-validation">
+          <div class="mb-3 row">
+            <label for="long_url" class="form-label">URL</label>
+            <input
+              type="url"
+              class="form-control"
+              name="long_url"
+              id=""
+              aria-describedby="helpId"
+              placeholder=""
+              required
+            />
+            <small id="helpId" class="form-text text-muted"
+              >URL to shorten</small
+            >
+          </div>
+          <div class="mb-3 row">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </form>
+      </div>
+    </main>
+    <footer>
+      <!-- place footer here -->
+    </footer>
+    <!-- Bootstrap JavaScript Libraries -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+      crossorigin="anonymous"
+    ></script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+      integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
+      crossorigin="anonymous"
+    ></script>
+
+    <script src="static/app.js"></script>
+  </body>
+</html>
