--- a/shorturl/frontend/assets/index.html
+++ b/shorturl/frontend/assets/index.html
@@ -64,7 +64,7 @@
             <a id="success_message" href="#">here</a>
           </div>
           <div class="alert alert-danger d-none" role="alert" id="error_alert">
-            <strong>Error</strong> <span id="error_message">Error Message</span>
+            <strong>Error</strong> <span id="error_message"></span>
           </div>
         </div>
 
