--- a/shorturl/frontend/assets/index.html
+++ b/shorturl/frontend/assets/index.html
@@ -51,7 +51,7 @@
     <main>
       <div class="container">
         <div class="mb-3 row">
-          <h1>Enter a URL to shorten Jake</h1>
+          <h1>Enter a URL to shorten</h1>
         </div>
 
         <div class="mb-3 row">
